--- a/www/about.html
+++ b/www/about.html
@@ -10,7 +10,7 @@
         <header>
             <a href="/"><img src="images/1.png" alt="Whitesquare logo"></a>
             <center>
-                <h1>Подбор автомобиля с пробегом</h1>
+                <h1>Подбор фильма</h1>
             </center>
         </header>
         <nav>
@@ -22,10 +22,9 @@
         </nav>
         <main>
             <center>
-                <p>Данный сайт предназначен для того, чтобы пользователь мог подобрать интересующий его автомобиль с пробегом по заданным характеристикам.</p>
                 <p>Cайт был выполнен в рамках проекта по предмету ПиКПО</p>
                 <p>Студенткой группы ПРО-327</p>
-                <p>Шангараева Аделия Ильнуровна</p>
+                <p>Шангараевой Аделией Ильнуровной</p>
             </center>
         </main>
     </div>
