--- a/www/index.html
+++ b/www/index.html
@@ -8,9 +8,9 @@
 <body>
 	<div class="wrapper">
 		<header>
-			<a href="/"><img src="images/1.png" alt="Whitesquare logo"></a>
+			<a href="/"><img src="images/twitter.png" alt="Whitesquare logo"></a>
 			<center>
-				<h1>Подбор автомобиля с пробегом</h1>
+				<h1>Подбор фильма</h1>
 			</center>
 		</header>
 		<nav>
@@ -20,71 +20,98 @@
 			</center>
 		</nav>
 		<main>
-			<aside>
-				<h2>Категории</h2>
+			<aside>				
+				<h3>Жанр</h3>
 				<nav>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">Эконом-класс</div>
+						<div class="checkbox__body">Боевик</div>
 					</label>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">Средний-класс</div>
+						<div class="checkbox__body">Приключение</div>
 					</label>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">Люкс-класс</div>
+						<div class="checkbox__body">Мультфильм</div>
+					</label>
+					<label class="checkbox style-e">
+						<input type="checkbox" />
+						<div class="checkbox__checkmark"></div>
+						<div class="checkbox__body">Криминал</div>
+					</label>
+					<label class="checkbox style-e">
+						<input type="checkbox" />
+						<div class="checkbox__checkmark"></div>
+						<div class="checkbox__body">Драма</div>
+					</label>
+					<label class="checkbox style-e">
+						<input type="checkbox" />
+						<div class="checkbox__checkmark"></div>
+						<div class="checkbox__body">Триллер</div>
+					</label>
+					<label class="checkbox style-e">
+						<input type="checkbox" />
+						<div class="checkbox__checkmark"></div>
+						<div class="checkbox__body">Фэнтези</div>
+					</label>
+					<label class="checkbox style-e">
+						<input type="checkbox" />
+						<div class="checkbox__checkmark"></div>
+						<div class="checkbox__body">Научная фантастика</div>
+					</label>
+					<label class="checkbox style-e">
+						<input type="checkbox" />
+						<div class="checkbox__checkmark"></div>
+						<div class="checkbox__body">Исторический</div>
 					</label>
 				</nav>
 
-				<h3>Год выпуска</h3>
+				<h3>Страна</h3>
 				<nav>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">до 2000</div>
+						<div class="checkbox__body">США</div>
 					</label>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">2000-2010</div>
+						<div class="checkbox__body">Великобритания</div>
 					</label>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">2010-2022</div>
+						<div class="checkbox__body">Россия</div>
 					</label>
 				</nav>
-
-				<h3>Пробег</h3>
+				<h3>Год релиза</h3>
 				<nav>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">до 20.000км</div>
+						<div class="checkbox__body">1950-1980</div>
 					</label>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">20.000км-100.000км</div>
+						<div class="checkbox__body">1980-2010</div>
 					</label>
 					<label class="checkbox style-e">
 						<input type="checkbox" />
 						<div class="checkbox__checkmark"></div>
-						<div class="checkbox__body">100.000км+</div>
+						<div class="checkbox__body">2010+</div>
 					</label>
 				</nav>
 
 				<h3>Сортировать по</h3>
 				<nav>
 
-					<p><input type="submit" value="Возрастанию цены"></p>
-					<p><input type="submit" value="  Убыванию цены   "></p>
-					<p><input type="submit" value="     По пробегу        "></p>
-					<p><input type="submit" value="   По году выпуска "></p>
+					<p><input type="submit" value=" Возрастанию года релиза "></p>
+					<p><input type="submit" value="  Убыванию года релиза   "></p>
 				</nav>
 
 			</aside>
@@ -96,50 +123,56 @@
 							<tr>
 								<th>ИД</th>
 								<th>Название</th>
-								<th>Год выпуска</th>
-								<th>Пробег</th>
-								<th>Цена</th>
-								<th>Категория автомобиля</th>
+								<th>Жанр</th>
+								<th>Год</th>
+								<th>Страна</th>
+								<th>Длительность</th>
+								<th>Слоган</th>
 							</tr>
 							<tr>
 								<td>1</td>
-								<td>Tata Nano Std</td>
-								<td>2011</td>
-								<td>19000</td>
-								<td>40000</td>
-								<td>Эконом-класс</td>
+								<td>Зелёная миля</td>
+								<th>Драма</th>
+								<th>1999</th>
+								<td>США</td>
+								<td>189</td>
+								<td>Пол Эджкомб не верил в чудеса.Пока не столкнулся с одним из них.</td>
 							</tr>
 							<tr>
 								<td>2</td>
-								<td>Maruti 800 Std</td>
-								<td>1998</td>
-								<td>40000</td>
-								<td>40000</td>
-								<td>Эконом-класс</td>
+								<td>Властелин колец.Возвращение короля</td>
+								<th>Фэнтези</th>
+								<td>Новая Зеландия</td>
+								<td>2003</td>
+								<td>201</td>
+								<td>Не может быть триумфа без потерь.Никакой победы без страданий.Нет свободы без жертвы.</td>
 							</tr>
 							<tr>
 								<td>3</td>
-								<td>Maruti 800 AC BSII</td>
-								<td>2001</td>
-								<td>100000</td>
-								<td>43000</td>
-								<td>Эконом-класс</td>
+								<td>Тайна Коко</td>
+								<th>Мультфильм</th>
+								<td>США</td>
+								<td>2017</td>
+								<td>105</td>
+								<td>Праздник всей жизни.</td>
 							</tr>
 							<tr>
 								<td>4</td>
-								<td>Tata Indica DLX</td>
-								<td>2003</td>
-								<td>120000</td>
-								<td>50000</td>
-								<td>Эконом-класс</td>
+								<td>1+1</td>
+								<th>Драма</th>
+								<td>Франция</td>
+								<td>2011</td>
+								<td>112</td>
+								<td>Иногда нужно попасть в чужой мир, чтобы узнать, чего не хватает вам в собственном.</td>
 							</tr>
 							<tr>
 								<td>5</td>
-								<td>Hyundai Santro GLS I - Euro</td>
-								<td>1999</td>
-								<td>120000</td>
-								<td>50000</td>
-								<td>Эконом-класс</td>
+								<td>Криминальное чтиво</td>
+								<th>Криминал</th>
+								<td>США</td>
+								<td>1994</td>
+								<td>154</td>
+								<td>То, что ты персонаж, не означает, что у тебя есть характер.</td>
 							</tr>
 						</tbody>
 					</table>
